...
import androidx.compose.ui.unit.dp
import com.practicum.myapplicationandroid.R
import com.practicum.myapplicationandroid.ui.common.ScreenTopBar
import com.practicum.myapplicationandroid.ui.theme.PlaylistMakerTheme
import com.practicum.myapplicationandroid.ui.theme.playlistMakerColors

const val SETTINGS_SCREEN_TAG = "settings_screen"

@Composable
fun SettingsScreen(
    onBackClick: () -> Unit,
    onShareClick: () -> Unit,
    onSupportClick: () -> Unit,
...
